--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Starter Template for Bootstrap</title>
+    <title>CMS</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -47,6 +47,9 @@
     <section>
 
     </section>
+    <footer>
+      <p>Copyright 2015, All Rights Reserved</p>
+    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
