--- a/index.html
+++ b/index.html
@@ -45,7 +45,59 @@
 </div>
 
     <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="list-group">
+              <a href="#" class="list-group-item active">
+                <i class="glyphicon glyphicon-dashboard"></i> Dashboard
+              </a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-file"></i> Pages</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-user"></i> User Accounts</a>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <h1 class="page-header"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</h1>
+            <h3>Latest Pages</h3>
+            <table class="table table-striped">
+              <tr>
+                <th>Page Title</th>
+                <th>Category</th>
+                <th>Author</th>
+              </tr>
+              <tr>
+                <td><a href="page.html">Sample Page One</a></td>
+                <td>Category One</td>
+                <td>John Doe</td>
+              </tr>
+              <tr>
+                <td><a href="page.html">Sample Page Two</a></td>
+                <td>Category Two</td>
+                <td>John Doe</td>
+              </tr>
+              <tr>
+                <td><a href="page.html">Sample Page Three</a></td>
+                <td>Category Two</td>
+                <td>Brad Traversy</td>
+              </tr>
+              <tr>
+                <td><a href="page.html">Sample Page Four</a></td>
+                <td>Category One</td>
+                <td>John Doe</td>
+              </tr>
+              <tr>
+                <td><a href="page.html">Sample Page Five</a></td>
+                <td>Category Three</td>
+                <td>James Smith</td>
+              </tr>
+            </table>
+            <a class="btn btn-default" href="pages.html">View All Pages</a>
+            <hr>
 
+          </div>
+        </div>
+      </div>
     </section>
     <footer>
       <p>Copyright 2015, All Rights Reserved</p>
