added users table to index file

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
               <tr>
                 <td><a href="page.html">Sample Page Three</a></td>
                 <td>Category Two</td>
-                <td>Brad Traversy</td>
+                <td>Jack Daniels</td>
               </tr>
               <tr>
                 <td><a href="page.html">Sample Page Four</a></td>
                 <td>Category One</td>
-                <td>John Doe</td>
+                <td>Jim Beem</td>
               </tr>
               <tr>
                 <td><a href="page.html">Sample Page Five</a></td>
@@ -93,12 +93,42 @@
               </tr>
             </table>
             <a class="btn btn-default" href="pages.html">View All Pages</a>
-            <hr>
-
+            <hr>          
+            
+            <h3>Latest Users</h3>
+            <table class="table table-striped">
+              <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Group</th>
+              </tr>
+              <tr>
+                <td><a href="user.html">Jack Daniels</a></td>
+                <td>jackd@gmail.com</td>
+                <td>Admin</td>
+              </tr>
+              <tr>
+                <td><a href="user.html">John Doe</a></td>
+                <td>jdoe@gmail.com</td>
+                <td>Admin</td>
+              </tr>
+              <tr>
+                <td><a href="user.html">James Smith</a></td>
+                <td>jamessmith@gmail.com</td>
+                <td>Registered</td>
+              </tr>
+              <tr>
+                <td><a href="user.html">Jim Beem</a></td>
+                <td>jimbeem@gmail.com</td>
+                <td>Registered</td>
+              </tr>             
+            </table>
+            <a class="btn btn-default" href="users.html">View All Users</a>
           </div>
         </div>
       </div>
     </section>
+    
     <footer>
       <p>Copyright 2015, All Rights Reserved</p>
     </footer>
