--- a/categories.html
+++ b/categories.html
@@ -42,5 +42,44 @@
       </ul>
       </div>
     </div>
+    
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="list-group">
+              <a href="#" class="list-group-item">
+                <i class="glyphicon glyphicon-dashboard"></i> Dashboard
+              </a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-file"></i> Pages</a>
+              <a href="#" class="list-group-item active"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-user"></i> User Accounts</a>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <h1 class="page-header"><i class="glyphicon glyphicon-file"></i> Pages</h1>
+            <table class="table table-striped">
+              <tr>
+                <th><input type="checkbox"></th>
+                <th>Category Title</th>
+              </tr>
+              <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="category.html">Sample Category One</a></td>
+              </tr>
+              <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="category.html">Sample Category Two</a></td>
+              </tr>
+              <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="category.html">Sample Category Three</a></td>
+              </tr>            
+            </table>          
+          </div>
+        </div>
+      </div>
+    </section>
+    
   </body>
 </html>  
