--- a/users.html
+++ b/users.html
@@ -41,5 +41,61 @@
         </ul>
       </div>
     </div>
+    
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="list-group">
+              <a href="#" class="list-group-item">
+                <i class="glyphicon glyphicon-dashboard"></i> Dashboard
+              </a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-file"></i> Pages</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
+              <a href="#" class="list-group-item active"><i class="glyphicon glyphicon-user"></i> User Accounts</a>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <h1 class="page-header"><i class="glyphicon glyphicon-user"></i> Users</h1>
+            <table class="table table-striped">
+              <tr>
+                <th><input type="checkbox"></th>
+                <th>Full Name</th>
+                <th>Email</th>
+                <th>Group</th>
+              </tr>
+              <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="page.html">John Doe</a></td>
+                <td>jdoe@gmail.com</td>
+                <td>Admin</td>
+              </tr>
+              <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="page.html">Jim Beem</a></td>
+                <td>jimbeem@gmail.com</td>
+                <td>Admin</td>
+              </tr>
+              <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="page.html">Jack Daniels</a></td>
+                <td>jackd@gmail.com</td>
+                <td>Registered</td>
+              </tr>
+            </table>        
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p>Copyright 2015, All Rights Reserved</p>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>  
