--- a/pages.html
+++ b/pages.html
@@ -58,6 +58,13 @@
           </div>
           <div class="col-md-8">
             <h1 class="page-header"><i class="glyphicon glyphicon-file"></i> Pages</h1>
+            <div class="col-md-6">
+                <div class="btn-group actions" role="group" aria-label="...">
+                  <a href="#" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i> New</a>
+                  <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                  <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i> Delete</a>
+              </div>
+            </div>
             <table class="table table-striped">
               <tr>
                 <th><input type="checkbox"></th>
