--- a/categories.html
+++ b/categories.html
@@ -57,7 +57,22 @@
             </div>
           </div>
           <div class="col-md-8">
-            <h1 class="page-header"><i class="glyphicon glyphicon-file"></i> Pages</h1>
+            <div class="row">
+              <div class="col-md-6">
+                <h1 class="page-header"><i class="glyphicon glyphicon-folder-open"></i> Categories</h1>
+              </div>
+              <div class="col-md-6">
+                <div class="btn-group actions" role="group" aria-label="...">
+                <a href="#" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i> New</a>
+                <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i> Delete</a>
+              </div>
+              </div>
+            </div>
+            <ol class="breadcrumb">
+              <li><a href="index.html">Dashboard</a></li>
+              <li class="active">Categories</li>
+            </ol>
             <table class="table table-striped">
               <tr>
                 <th><input type="checkbox"></th>
@@ -75,7 +90,26 @@
                 <td><input type="checkbox"></td>
                 <td><a href="category.html">Sample Category Three</a></td>
               </tr>            
-            </table>          
+            </table>
+            <nav>
+              <ul class="pagination">
+                <li>
+                  <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li>
+                  <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
