--- a/pages.html
+++ b/pages.html
@@ -57,21 +57,34 @@
             </div>
           </div>
           <div class="col-md-8">
-            <h1 class="page-header"><i class="glyphicon glyphicon-file"></i> Pages</h1>
-            <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-6">
+                <h1 class="page-header"><i class="glyphicon glyphicon-file"></i> Pages</h1>
+              </div>
+              <div class="col-md-6">
                 <div class="btn-group actions" role="group" aria-label="...">
-                  <a href="#" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i> New</a>
-                  <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
-                  <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i> Delete</a>
+                <a href="#" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i> New</a>
+                <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i> Delete</a>
+              </div>
               </div>
             </div>
-            <table class="table table-striped">
+
+            <ol class="breadcrumb">
+              <li><a href="index.html">Dashboard</a></li>
+              <li class="active">Pages</li>
+            </ol>
+            
+            <table id="sort-table" class="table table-striped tablesorter">
+              <thead>
               <tr>
                 <th><input type="checkbox"></th>
-                <th>Page Title</th>
-                <th>Category</th>
-                <th>Author</th>
+                <th>Page Title <i class="glyphicon glyphicon-chevron-down"></i></th>
+                <th>Category <i class="glyphicon glyphicon-chevron-down"></i></th>
+                <th>Author <i class="glyphicon glyphicon-chevron-down"></i></th>
               </tr>
+            </thead>
+            <tbody>
               <tr>
                 <td><input type="checkbox"></td>
                 <td><a href="page.html">Sample Page One</a></td>
@@ -96,6 +109,7 @@
                 <td>Category One</td>
                 <td>John Doe</td>
               </tr>
+              </tbody>
               <tr>
                 <td><input type="checkbox"></td>
                 <td><a href="page.html">Sample Page Five</a></td>
@@ -138,6 +152,14 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/jquery.tablesorter.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script>
+    $(function(){
+      $('#sort-table').tablesorter({
+        sortList:[[0,0], [1,0]]
+      });
+    });
+    </script>
   </body>
 </html>
