--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <div class="container">
 
       <form class="form-signin" action="index.html" method="post">
-        <h2 class="form-signin-heading text-center">AlphaCMS</h2>
+        <h2 class="form-signin-heading text-center">CMS</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
