--- a/users.html
+++ b/users.html
@@ -56,14 +56,34 @@
             </div>
           </div>
           <div class="col-md-8">
-            <h1 class="page-header"><i class="glyphicon glyphicon-user"></i> Users</h1>
-            <table class="table table-striped">
+            <div class="row">
+              <div class="col-md-6">
+                <h1 class="page-header"><i class="glyphicon glyphicon-user"></i> Users</h1>
+              </div>
+              <div class="col-md-6">
+                <div class="btn-group actions" role="group" aria-label="...">
+                <a href="#" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i> New</a>
+                <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                <a href="#" type="button" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i> Delete</a>
+              </div>
+              </div>
+            </div>
+
+            <ol class="breadcrumb">
+              <li><a href="index.html">Dashboard</a></li>
+              <li class="active">Users</li>
+            </ol>
+
+            <table id="sort-table" class="table table-striped tablesorter">
+              <thead>
               <tr>
                 <th><input type="checkbox"></th>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Group</th>
+                <th>Full Name <i class="glyphicon glyphicon-chevron-down"></i></th>
+                <th>Email <i class="glyphicon glyphicon-chevron-down"></i></th>
+                <th>Group <i class="glyphicon glyphicon-chevron-down"></i></th>
               </tr>
+            </thead>          
+             <tbody>
               <tr>
                 <td><input type="checkbox"></td>
                 <td><a href="page.html">John Doe</a></td>
@@ -82,6 +102,7 @@
                 <td>jackd@gmail.com</td>
                 <td>Registered</td>
               </tr>
+             </tbody>
             </table> 
              <nav>
               <ul class="pagination">
