--- a/category.html
+++ b/category.html
@@ -42,6 +42,73 @@
       </div>
     </div>
     
-    
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="list-group">
+              <a href="#" class="list-group-item">
+                <i class="glyphicon glyphicon-dashboard"></i> Dashboard
+              </a>
+              <a href="#" class="list-group-item active"><i class="glyphicon glyphicon-file"></i> Pages</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-user"></i> User Accounts</a>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="row">
+              <div class="col-md-12">
+                <h1 class="page-header"><i class="glyphicon glyphicon-file"></i> Add Category</h1>
+              </div>
+            </div>
+            <ol class="breadcrumb">
+              <li><a href="index.html">Dashboard</a></li>
+              <li><a href="categories.html">Categories</a></li>
+              <li class="active">Category</li>
+            </ol>           
+            <form>
+              <div class="form-group">
+                <label>Category Name</label>
+                <input type="text" class="form-control" placeholder="Enter Category Name">
+              </div>         
+              <div class="form-group">
+                <label>Main Image</label>
+                <input type="file">
+                <p class="help-block">Max Size: 4MB</p>
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p>Copyright 2015, All Rights Reserved</p>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/jquery.tablesorter.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script>
+    $(function(){
+      $('#sort-table').tablesorter({
+        sortList:[[0,0], [1,0]]
+      });
+    });
+    </script>
+   <script>
+      var $rows = $('table tr');
+      $('.search-form').keyup(function() {
+        var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+        $rows.show().filter(function() {
+          var text = $(this).text().replace(/\s+/g, ' ').toLowerCase();
+          return !~text.indexOf(val);
+        }).hide();
+      });
+   </script>    
   </body>   
 </html>  
