--- a/page.html
+++ b/page.html
@@ -42,6 +42,55 @@
       </div>
     </div>
     
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="list-group">
+              <a href="#" class="list-group-item">
+                <i class="glyphicon glyphicon-dashboard"></i> Dashboard
+              </a>
+              <a href="#" class="list-group-item active"><i class="glyphicon glyphicon-file"></i> Pages</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-user"></i> User Accounts</a>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="row">
+              <div class="col-md-12">
+                <h1 class="page-header"><i class="glyphicon glyphicon-file"></i> Add Page</h1>
+              </div>
+            </div>
+            <ol class="breadcrumb">
+              <li><a href="index.html">Dashboard</a></li>
+              <li><a href="pages.html">Pages</a></li>
+              <li class="active">Page</li>
+            </ol>            
+            <form>
+              <div class="form-group">
+                <label>Page Title</label>
+                <input type="text" class="form-control" placeholder="Enter Page Title">
+              </div>
+              <div class="form-group">
+                <label>Category</label>
+                <select class="form-control">
+                  <option value="1">Category One</option>
+                  <option value="2">Category Two</option>
+                  <option value="3">Category Three</option>
+                  <option value="4">Category Four</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label>Page Body</label>
+                <textarea class="form-control" placeholder="Enter Page Body"></textarea>
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    
     <footer>
       <p>Copyright 2015, All Rights Reserved</p>
     </footer>
@@ -52,6 +101,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/jquery.tablesorter.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script>
+    $(function(){
+      $('#sort-table').tablesorter({
+        sortList:[[0,0], [1,0]]
+      });
+    });
+    </script>
+   <script>
+      var $rows = $('table tr');
+      $('.search-form').keyup(function() {
+        var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+        $rows.show().filter(function() {
+          var text = $(this).text().replace(/\s+/g, ' ').toLowerCase();
+          return !~text.indexOf(val);
+        }).hide();
+      });
+    </script>
   </body>  
   
 </html>  
