--- a/user.html
+++ b/user.html
@@ -41,5 +41,35 @@
         </ul>
       </div>
     </div>
+    
+    
+    <footer>
+      <p>Copyright 2015, All Rights Reserved</p>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/jquery.tablesorter.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script>
+    $(function(){
+      $('#sort-table').tablesorter({
+        sortList:[[0,0], [1,0]]
+      });
+    });
+    </script>
+
+   <script>
+      var $rows = $('table tr');
+      $('.search-form').keyup(function() {
+        var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+        $rows.show().filter(function() {
+          var text = $(this).text().replace(/\s+/g, ' ').toLowerCase();
+          return !~text.indexOf(val);
+        }).hide();
+      });
+    </script>
   </body>
 </html>  
